# my-harness

./: .gitignore  AGENTS.md  feature_list.json  init.sh  token-consume.json
.codex/agents/: implementer.md  reviewer.md  router.md
back/: AGENTS.md  README.md  pepe_grillo.db  pyproject.toml
back/app/: main.py
back/app/application/: exceptions.py  use_cases.py
back/app/core/: __init__.py  config.py  container.py
back/app/domain/: entities.py  ports.py
back/app/entrypoints/api/: __init__.py  dependencies.py  routes.py  schemas.py
back/app/infrastructure/: agent.py  documents.py  repositories.py  security.py
back/app/infrastructure/db/: models.py
back/tests/: conftest.py  test_api.py  test_config.py
docs/: architecture.md  conventions.md  verification.md
front/: AGENTS.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vitest.config.js  vitest.config.ts
front/src/: App.tsx  main.tsx
progress/: current.md  explore_chat_test_strategy.md  explore_composer_css.md  explore_runtime_growth.md  explore_vector_api_tests.md  explore_vector_architecture.md  explore_vector_stack.md  impl_chat-bubble-padding.md  impl_chat_box_growth.md  impl_chat_login_from_chat.md  impl_env_vars.md  impl_logout_user_switch.md  impl_vector_documents.md  impl_vector_documents_fix.md  review_chat-bubble-padding.md  review_chat_login_from_chat.md  review_env_vars.md  review_logout_user_switch.md  review_vector_documents.md  review_vector_documents_fix.md  spec_vector_documents.md  spec_vector_documents_fix.md
(+14 files in other folders)
