[project]
name = "pepe-grillo-back"
version = "0.1.0"
description = "FastAPI backend for user registration and secure AI chat."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "google-adk>=1.32.0,<2.0.0",
  "openpyxl>=3.1.0,<4.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "pypdf>=5.0.0,<6.0.0",
  "python-docx>=1.1.0,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "qdrant-client>=1.12.0,<2.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
